--- a/src/main/webapp/Karma Shop-doc/index.html
+++ b/src/main/webapp/Karma Shop-doc/index.html
@@ -8,7 +8,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Karma Shop</title>
+	`<title>NT Sneaker Shop</title>
 	<meta name="description" content="">
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
